--- a/packages/core/styles/01-settings/settings-font-family/_settings-font-family.scss
+++ b/packages/core/styles/01-settings/settings-font-family/_settings-font-family.scss
@@ -63,4 +63,4 @@ $bolt-font-families: (
   )
 );
 
-@include export-data('typography/font-families.bolt.json', $bolt-font-families);
+@include export-data('typography/font-families.bolt.#{$bolt-lang}.json', $bolt-font-families);
