--- a/apps/pattern-lab/src/_meta/_01-foot.twig
+++ b/apps/pattern-lab/src/_meta/_01-foot.twig
@@ -3,7 +3,7 @@
   {{ patternLabFoot | raw }}
 
     {# @TODO: how do we get this to use the exact same values from our global .js config without having the source of truth live as a .yml or .json file...? #}
-    {% set assets = get_data("@bolt-assets/bolt-webpack-manifest.json") %}
+    {% set assets = get_data("@bolt-assets/bolt-webpack-manifest#{bolt.data.config.lang ? "-" ~ bolt.data.config.lang : ""}.json") %}
 
     <script src="{{ assets["bolt-global.js"] }}?cachebuster="{{ cacheBuster }}"" async></script>
     <script src="{{ assets["pl.js"] }}?cachebuster="{{ cacheBuster }}"" async></script>
