add examples to share patternlab page of custom label share component for button and inline styles

--- a/apps/pattern-lab/src/_patterns/02-components/share/06-share-custom-label.twig
+++ b/apps/pattern-lab/src/_patterns/02-components/share/06-share-custom-label.twig
@@ -1,5 +1,6 @@
 <div style="margin: 0 auto; width: 100%; padding: 25rem 0 0;">
 {% include '@bolt-components-share/share.twig' with {
+  text: 'Custom label',
   sources: [
     {
       name: "facebook",
