--- a/apps/pattern-lab/src/_patterns/04-pages/90-content-hub/anchor-ribbon-example.twig
+++ b/apps/pattern-lab/src/_patterns/04-pages/90-content-hub/anchor-ribbon-example.twig
@@ -505,7 +505,7 @@
   
     {% include '@bolt-components-share/share.twig' with {
       inline: true,
-      text: 'something',
+      text: 'Custom label',
       sources: [
         {
           name: "facebook",
