fix: change default button font-size to small

--- a/packages/components/bolt-button/src/button.scss
+++ b/packages/components/bolt-button/src/button.scss
@@ -75,7 +75,7 @@ bolt-button {
 .c-bolt-button,
 .c-bolt-button--medium {
   @include bolt-padding(medium, squished);
-  @include bolt-font-size(xsmall);
+  @include bolt-font-size(small);
 
   &.c-bolt-button--icon-only {
     padding: bolt-spacing(medium);
