fix IE11 alignment issue on close toggle of tooltip for share button

--- a/packages/components/bolt-tooltip/src/tooltip.scss
+++ b/packages/components/bolt-tooltip/src/tooltip.scss
@@ -410,12 +410,13 @@ $bolt-tooltip-transition: $bolt-transition;
     position: absolute;
     top: 0; // For IE 11
     bottom: 0; // For IE 11
+    left: 50%; // For IE 11 
     opacity: 0;
-    transform: translate3d(0, -200%, 0);
+    transform: translate3d(-50%, -200%, 0);
 
     .is-active & {
       opacity: 1;
-      transform: translate3d(0, 0, 0);
+      transform: translate3d(-50%, 0, 0);
     }
   }
 
