fix: fix navbar smoothscroll at xs breakpoint (BDS-396)

--- a/packages/components/bolt-nav-priority/nav-priority.scss
+++ b/packages/components/bolt-nav-priority/nav-priority.scss
@@ -230,8 +230,8 @@ bolt-nav-priority {
     @media screen and (max-width: #{bolt-breakpoint(xsmall)}) {
       grid-row: 2/span 1;
       grid-column: 1/span 6;
-      position: static;
       width: auto;
+      left: 0;
     }
   }
 
