fix: word wrap and word break settings

--- a/packages/components/bolt-code-snippet/src/code-snippet.scss
+++ b/packages/components/bolt-code-snippet/src/code-snippet.scss
@@ -20,6 +20,12 @@ bolt-code-snippet {
 
 .c-bolt-code-snippet,
 .c-bolt-code-snippet__code {
+  white-space: -moz-pre-wrap;
+  white-space: -o-pre-wrap;
+  white-space: pre-wrap;
+  word-spacing: normal;
+  word-break: normal;
+  word-wrap: break-word;
   color: inherit;
   color: $bolt-code-snippet-text-color;
   text-align: left;
