--- a/packages/components/bolt-background-shapes/src/background-shapes.scss
+++ b/packages/components/bolt-background-shapes/src/background-shapes.scss
@@ -3,11 +3,11 @@
 .c-bolt-background-shapes {
   width: 300px;
 
-  @include respond-to(small) {
+  @include bolt-mq(small) {
     width: 500px;
   }
 
-  @include respond-to(large) {
+  @include bolt-mq(large) {
     width: 900px;
   }
 
