--- a/packages/components/bolt-navbar/src/navbar.scss
+++ b/packages/components/bolt-navbar/src/navbar.scss
@@ -47,7 +47,7 @@ bolt-navbar {
   justify-content: space-between;
   position: relative;
 
-  @include respond-to(medium) {
+  @include bolt-mq(medium) {
     @include bolt-padding-left(large);
     @include bolt-padding-right(large);
   }
