--- a/packages/core/styles/index.scss
+++ b/packages/core/styles/index.scss
@@ -1,8 +1,7 @@
 /* ------------------------------------ *\
   BOLT CSS CORE
 \* ------------------------------------ */
-@import 'breakpoint-sass';
-@import 'breakpoint-slicer/stylesheets/breakpoint-slicer';
+@import 'sass-mq';
 @import 'sassy-maps/sass/sassy-maps';
 @import '@theme-tools/sass-export-data/export-data.scss';
 @import '01-settings/**/*.scss';
