--- a/packages/global/styles/07-utilities/_utilities-height.scss
+++ b/packages/global/styles/07-utilities/_utilities-height.scss
@@ -29,9 +29,9 @@ $bolt-height-props: (
 @include bolt-height-utils;
 
 // Loop over our breakpoints
-@each $breakpoint in $breakpoints {
+@each $breakpoint in $bolt-breakpoints {
   $breakpointName: nth($breakpoint, 1);
-  @include respond-to($breakpointName) {
+  @include bolt-mq($breakpointName) {
     @include bolt-height-utils(\@#{$breakpointName});
   }
 }
