--- a/packages/global/styles/07-utilities/_utilities-opacity.scss
+++ b/packages/global/styles/07-utilities/_utilities-opacity.scss
@@ -18,9 +18,9 @@ $bolt-opacity-props: (0, .25, .50, .75, 1);
 @include bolt-opacity-utils;
 
 // Loop over our breakpoints
-@each $breakpoint in $breakpoints {
+@each $breakpoint in $bolt-breakpoints {
   $breakpointName: nth($breakpoint, 1);
-  @include respond-to($breakpointName) {
+  @include bolt-mq($breakpointName) {
     @include bolt-opacity-utils(\@#{$breakpointName});
   }
 }
