--- a/packages/components/bolt-background/src/background.scss
+++ b/packages/components/bolt-background/src/background.scss
@@ -207,12 +207,12 @@ $bolt-bg-shape-offset-side-large: $bolt-bg-shape-offset-bottom-large * 1.2;
   right: $bolt-bg-shape-offset-side-default;
   bottom: $bolt-bg-shape-offset-bottom-default;
 
-  @include respond-to(small) {
+  @include bolt-mq(small) {
     right: $bolt-bg-shape-offset-side-small;
     bottom: $bolt-bg-shape-offset-bottom-small;
   }
 
-  @include respond-to(large) {
+  @include bolt-mq(large) {
     right: $bolt-bg-shape-offset-side-large;
     bottom: $bolt-bg-shape-offset-bottom-large;
   }
@@ -223,11 +223,11 @@ $bolt-bg-shape-offset-side-large: $bolt-bg-shape-offset-bottom-large * 1.2;
   left: $bolt-bg-shape-offset-side-default;
   right: auto;
 
-  @include respond-to(small) {
+  @include bolt-mq(small) {
     left: $bolt-bg-shape-offset-side-small;
   }
 
-  @include respond-to(large) {
+  @include bolt-mq(large) {
     left: $bolt-bg-shape-offset-side-large;
   }
 }
