--- a/packages/core/styles/01-settings/settings-breakpoints/_settings-breakpoints.scss
+++ b/packages/core/styles/01-settings/settings-breakpoints/_settings-breakpoints.scss
@@ -32,24 +32,16 @@ $bolt-breakpoints: (
   xxxlarge: $bolt-breakpoint-xxxlarge
 );
 
-
+$mq-breakpoints: $bolt-breakpoints;
 
 
 @include export-data("breakpoints.bolt.json", $bolt-breakpoints);
 // Re-map Bolt's namespaced Sassmap to the Breakpoint Sass's `$breakpoints` default
 
 /* stylelint-disable-next-line scss/dollar-variable-pattern */
-$breakpoints: $bolt-breakpoints;
 /* stylelint-enable */
 
-@each $breakpoint in $breakpoints {
-  $name:     nth($breakpoint, 1);
-  $value:    nth($breakpoint, 2);
-  @include add-breakpoint(quote($name), $value, $overwrite: true);
 
-  $slicer-breakpoint-names: append($slicer-breakpoint-names, $name);
-  $slicer-breakpoints:      append($slicer-breakpoints, $value);
-}
 
 
 
@@ -57,7 +49,7 @@ $breakpoints: $bolt-breakpoints;
 ///   For example, do this at medium sized screens or larger
 ///
 ///   .c-card {
-///      @include respond-to(medium){
+///      @include bolt-mq(medium){
 ///         flex-direction: column; /* [1] */
 ///      }
 ///   }
