fix: replace respond-to in pl css

--- a/apps/pattern-lab/src/_patterns/04-pages/80-events/_event-sponsors-with-action-block.scss
+++ b/apps/pattern-lab/src/_patterns/04-pages/80-events/_event-sponsors-with-action-block.scss
@@ -44,7 +44,7 @@
     justify-content: center;
     margin-bottom: 1.5rem;
 
-    @include respond-to(small) {
+    @include bolt-mq(small) {
       height: 74px;
     }
 
@@ -54,7 +54,7 @@
       max-width: 160px;
       width: auto;
 
-      @include respond-to(small) {
+      @include bolt-mq(small) {
         max-height: 74px;
       }
     }
