fix: update stylelint validation override to use correct scss/at-mixin-pattern rule

--- a/packages/core/styles/02-tools/tools-breakpoint/_tools-breakpoint.scss
+++ b/packages/core/styles/02-tools/tools-breakpoint/_tools-breakpoint.scss
@@ -19,7 +19,7 @@
 }
 
 
-/* stylelint-disable-next-line scss/at-function-pattern */
+/* stylelint-disable-next-line scss/at-mixin-pattern */
 @mixin respond-to($from) {
   @warn 'Bolt\'s `respond-to` mixin is deprecated and will be removed in v2.0.0 of Bolt. Use the new @bolt-mq() mixin instead.';
 
