fix: remove prismjs from getting added to Pattern Lab's head to avoid conflicting styles in browsers that don't support the shadow dom

--- a/apps/pattern-lab/src/_meta/_00-head.twig
+++ b/apps/pattern-lab/src/_meta/_00-head.twig
@@ -26,7 +26,7 @@
 
 
     <!-- Begin Pattern Lab (Required for Pattern Lab to run properly) -->
-    {{ patternLabHead | raw }}
+    <link rel="stylesheet" href="../../styleguide/css/styleguide.min.css?{{ cacheBuster }}" media="all">
     <!-- End Pattern Lab -->
 
   </head>
